Add gc-java8-UseParallelGC.log